--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,16 @@
 	<artifactId>PopMail</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
+	<dependencies>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4</version>
+		</dependency>
+	</dependencies>
 
-	
+	<properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
 </project>
